apps/authentik/authentik/app/callback-ingresses.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik-outpost-public
spec:
  ingressClassName: traefik-public
  tls:
    - hosts:
        - isaiah.harville.dev
        - grafana.harville.dev
  rules:
    - host: isaiah.harville.dev
      http:
        paths:
          - path: /outpost.goauthentik.io/
            pathType: Prefix
            backend:
              service:
                name: authentik-server
                port:
                  name: http
    - host: grafana.harville.dev
      http:
        paths:
          - path: /outpost.goauthentik.io/
            pathType: Prefix
            backend:
              service:
                name: authentik-server
                port:
                  name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik-outpost-internal
spec:
  ingressClassName: traefik-internal
  tls:
    - hosts:
        - seaweedfs.int.harville.dev
        - flux.int.harville.dev
        - longhorn.int.harville.dev
  rules:
    - host: seaweedfs.int.harville.dev
      http:
        paths:
          - path: /outpost.goauthentik.io/
            pathType: Prefix
            backend:
              service:
                name: authentik-server
                port:
                  name: http
    - host: flux.int.harville.dev
      http:
        paths:
          - path: /outpost.goauthentik.io/
            pathType: Prefix
            backend:
              service:
                name: authentik-server
                port:
                  name: http
    - host: longhorn.int.harville.dev
      http:
        paths:
          - path: /outpost.goauthentik.io/
            pathType: Prefix
            backend:
              service:
                name: authentik-server
                port:
                  name: http
